--- a/style.css
+++ b/style.css
@@ -9,10 +9,14 @@
 
 }
 
-body{
-  overflow-x: hidden;
-  max-width: 365px;
-}
+@media(min-width:319px)and(max-width: 375px){
+ 
+
+
+
+ 
+
+
 
 .ico-menu{
 cursor: pointer;
@@ -75,6 +79,8 @@ margin-top: 30px;
 transition-duration: 2s;
 transition-delay: 1s;
 transition-timing-function: ease;
+
+
 
 }
 
@@ -202,4 +208,4 @@ p{
   
 
 
-
+}
