--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
 @import url('https://fonts.googleapis.com/css2?family= Cabin+Condensed & display =swap');
 
 *{
-  box-sizing: border-box;
+  
   margin: auto;
+  box-sizing: border-box;
+ 
 
 }
 
-@media(min-width:319px)and(max-width: 375px){
+@media(max-width: 720px){
  
 
 
-
  
-
 
 
 .ico-menu{
@@ -40,10 +40,19 @@ cursor: pointer;
 
 
 body{
+  
   background-color: black;
+
+ 
+  
+  
+  
+
 }
 
 .iphone8{
+ 
+  align-items: center;
   
 
   width: 375px;
@@ -52,9 +61,11 @@ body{
   
 }
 .shape1{
+  
   width: 375px;
   height: 124px;
   background-image: url(images/Rectangle\ 1.svg);
+  overflow-x: visible;
 }
 
 .borda{
@@ -63,7 +74,7 @@ display:block;
 border: 2px solid rgba(255, 255, 255, 0.534);
 border-radius: 38px ;
 height: 469px;
-width: 341px;
+width: 375px;
 left: 18px;
 top: 106px;
 border-radius: 38px;
@@ -85,6 +96,7 @@ transition-timing-function: ease;
 }
 
 .links{
+ 
   display: block;
   padding: 0%;
   
@@ -93,6 +105,7 @@ transition-timing-function: ease;
 
 
 .links a{
+  
   text-decoration: none;
   font-size: 13pt;
   color:white;
@@ -138,7 +151,7 @@ display: flex;
 }
 .foot1{
 justify-content: space-between; 
-width: 375px;
+width: 341px;
 height: 89px;
 left: 0px;
 top: 590px;
